--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <use href="./images/sprite.svg#icon-antenna"></use>
               </svg>
             </button>
-            <h3 class="title">Внимание к деталям</h3>
+            <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
             <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li class="item clock">
@@ -78,7 +78,7 @@
                 <use href="./images/sprite.svg#icon-clock"></use>
               </svg>
             </button>
-            <h3 class="title">Пунктуальность</h3>
+            <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
             <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
           </li>
           <li class="item diagram">
@@ -87,7 +87,7 @@
                 <use href="./images/sprite.svg#icon-diagram"></use>
               </svg>
             </button>
-            <h3 class="title">Планирование</h3>
+            <h3 class="title">ПЛАНИРОВАНИЕ</h3>
             <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
           </li>
           <li class="item astronaut">
@@ -96,7 +96,7 @@
                 <use href="./images/sprite.svg#icon-astronaut"></use>
               </svg>
             </button>
-            <h3 class="title">Современные технологии</h3>
+            <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
             <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
