--- a/index.html
+++ b/index.html
@@ -369,10 +369,8 @@
     <!-- footer -->
     <footer>
       <div class="footer container">
-        <div class="address-blok item-colomn">
-          <a class="site-logo footer-logo" href="./" lang="en"
-            ><span>Web </span><span class="logo-studio">Studio</span></a
-          >
+        <div class="section address-blok item-colomn">
+          <a class="site-logo" href="./" lang="en"><span>Web </span><span class="logo-studio">Studio</span></a>
           <address class="address-list">
             <p class="map">г. Киев, пр-т Леси Украинки, 26</p>
             <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
