адаптирую шапку, меню шапки

--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
   <body>
     <!-- Шапка страницы -->
     <header class="site-header container">
+      <a class="site-logo" href="./" lang="en"><span>Web </span><span class="logo-studio">Studio</span></a>
+      <button class="modal-nav is-open" type="button">
+        <svg class="icon" width="40px" height="40px" aria-label="переключатель мобильного меню">
+          <use class="icon-menu" href="./images/sprite-modal.svg#icon-menu-40"></use>
+          <use class="icon-cross" href="./images/sprite-modal.svg#icon-close-40"></use>
+        </svg>
+      </button>
       <nav class="site-nav">
-        <a class="site-logo" href="./" lang="en"><span>Web </span><span class="logo-studio">Studio</span></a>
         <ul class="list">
           <li class="item"><a class="link current" href="./index.html">Студия</a></li>
           <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
