--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Шапка страницы -->
     <header class="site-header container">
       <a class="site-logo" href="./" lang="en"><span>Web </span><span class="logo-studio">Studio</span></a>
-      <button class="menu-button is-open" type="button" data-menu-button>
+      <button class="menu-button" type="button" data-menu-button>
         <svg
           class="icon"
           width="40px"
@@ -31,7 +31,7 @@
           <use class="icon-cross" href="./images/sprite-modal.svg#icon-close-40"></use>
         </svg>
       </button>
-      <div class="menu-container" id="menu-container" data-menu>
+      <div class="menu-container is-open" id="menu-container" data-menu>
         <nav class="site-nav">
           <ul class="list">
             <li class="item"><a class="link current studio" href="./index.html">Студия</a></li>
