закончил адаптировать картинки команды

--- a/index.html
+++ b/index.html
@@ -142,7 +142,19 @@
           <h2 class="title-section">Наша команда</h2>
           <ul class="list-team">
             <li class="item">
-              <img src="./images/foto1.jpg" alt="Фото" width="270" />
+              <picture class="portret" alt="Фото">
+                <source media="(min-width:1200px)" srcset="./images/foto1_270.jpg, ./images/foto1_270@2x.jpg 2x" />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/foto1tablet_354.jpg, ./images/foto1tablet_354@2x.jpg 2x"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/foto1mobile_450.jpg, ./images/foto1mobile_450@2x.jpg 2x"
+                />
+
+                <img src="./images/foto1_270.jpg" />
+              </picture>
               <h3 class="title name">Николай Кучеренко</h3>
               <p class="title work" lang="en">Product Designer</p>
               <ul class="list-social">
@@ -177,7 +189,19 @@
               </ul>
             </li>
             <li class="item">
-              <img src="./images/foto2.jpg" alt="Фото" width="270" />
+              <picture class="portret" alt="Фото">
+                <source media="(min-width:1200px)" srcset="./images/foto2_270.jpg, ./images/foto2_270@2x.jpg 2x" />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/foto2tablet_354.jpg, ./images/foto2tablet_354@2x.jpg 2x"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/foto2mobile_450.jpg, ./images/foto2mobile_450@2x.jpg 2x"
+                />
+
+                <img src="./images/foto2_270.jpg" />
+              </picture>
               <h3 class="title name">Ольга Иванова</h3>
               <p class="title work" lang="en">Frontend Developer</p>
               <ul class="list-social">
@@ -212,7 +236,19 @@
               </ul>
             </li>
             <li class="item">
-              <img src="./images/foto3.jpg" alt="Фото" width="270" />
+              <picture class="portret" alt="Фото">
+                <source media="(min-width:1200px)" srcset="./images/foto3_270.jpg, ./images/foto3_270@2x.jpg 2x" />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/foto3tablet_354.jpg, ./images/foto3tablet_354@2x.jpg 2x"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/foto3mobile_450.jpg, ./images/foto3mobile_450@2x.jpg 2x"
+                />
+
+                <img src="./images/foto3_270.jpg" />
+              </picture>
               <h3 class="title name">Андрей Шевченко</h3>
               <p class="title work" lang="en">Marketing</p>
               <ul class="list-social">
@@ -247,7 +283,19 @@
               </ul>
             </li>
             <li class="item">
-              <img src="./images/foto4.jpg" alt="Фото" width="270" />
+              <picture class="portret" alt="Фото">
+                <source media="(min-width:1200px)" srcset="./images/foto4_270.jpg, ./images/foto4_270@2x.jpg 2x" />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/foto4tablet_354.jpg, ./images/foto4tablet_354@2x.jpg 2x"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/foto4mobile_450.jpg, ./images/foto4mobile_450@2x.jpg 2x"
+                />
+
+                <img src="./images/foto4_270.jpg" />
+              </picture>
               <h3 class="title name">Иван Николаев</h3>
               <p class="title work" lang="en">UI Designer</p>
               <ul class="list-social">
