сделал фильтры для мобилки

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,11 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro1.jpg" alt="Анкеты" width="370" />
+                <img
+                  alt="Анкеты"
+                  srcset="./images/pro1_450.jpg, ./images/pro1_450@2x.jpg 2x"
+                  src="./images/pro1_450.jpg"
+                />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -98,7 +102,7 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro2.jpg" alt="Баскетбол" width="370" />
+                <img src="./images/pro2_450.jpg" alt="Баскетбол" width="370" />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -113,7 +117,7 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro3.jpg" alt="Ресторан  лого" width="370" />
+                <img src="./images/pro3_450.jpg" alt="Ресторан  лого" width="370" />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -128,7 +132,7 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro4.jpg" alt="Наушники" width="370" />
+                <img src="./images/pro4_450.jpg" alt="Наушники" width="370" />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -143,7 +147,7 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro5.jpg" alt="Коробки" width="370" />
+                <img src="./images/pro5_450.jpg" alt="Коробки" width="370" />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -158,7 +162,7 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro6.jpg" alt="Монитор" width="370" />
+                <img src="./images/pro6_450.jpg" alt="Монитор" width="370" />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -173,7 +177,7 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro7.jpg" alt="Журнал" width="370" />
+                <img src="./images/pro7_450.jpg" alt="Журнал" width="370" />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -188,7 +192,7 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro8.jpg" alt="Бирка" width="370" />
+                <img src="./images/pro8_450.jpg" alt="Бирка" width="370" />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -203,7 +207,7 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro9.jpg" alt="Ноутбук" width="370" />
+                <img src="./images/pro9_450.jpg" alt="Ноутбук" width="370" />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
