--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,7 @@
             <a class="link" href="">
               <div class="overflow-img">
                 <img
+                  class="pro-img"
                   alt="Анкеты"
                   srcset="./images/pro1_450.jpg, ./images/pro1_450@2x.jpg 2x"
                   src="./images/pro1_450.jpg"
@@ -102,7 +103,12 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro2_450.jpg" alt="Баскетбол" width="370" />
+                <img
+                  class="pro-img"
+                  alt="Баскетбол"
+                  srcset="./images/pro2_450.jpg, ./images/pro2_450@2x.jpg 2x"
+                  src="./images/pro2_450.jpg"
+                />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -117,7 +123,12 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro3_450.jpg" alt="Ресторан  лого" width="370" />
+                <img
+                  class="pro-img"
+                  alt="Ресторан  лого"
+                  srcset="./images/pro3_450.jpg, ./images/pro3_450@2x.jpg 2x"
+                  src="./images/pro3_450.jpg"
+                />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -132,7 +143,12 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro4_450.jpg" alt="Наушники" width="370" />
+                <img
+                  class="pro-img"
+                  alt="Наушники"
+                  srcset="./images/pro4_450.jpg, ./images/pro4_450@2x.jpg 2x"
+                  src="./images/pro4_450.jpg"
+                />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -147,7 +163,12 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro5_450.jpg" alt="Коробки" width="370" />
+                <img
+                  class="pro-img"
+                  alt="Коробки"
+                  srcset="./images/pro5_450.jpg, ./images/pro5_450@2x.jpg 2x"
+                  src="./images/pro5_450.jpg"
+                />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -162,7 +183,12 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro6_450.jpg" alt="Монитор" width="370" />
+                <img
+                  class="pro-img"
+                  alt="Монитор"
+                  srcset="./images/pro6_450.jpg, ./images/pro6_450@2x.jpg 2x"
+                  src="./images/pro6_450.jpg"
+                />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -177,7 +203,12 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro7_450.jpg" alt="Журнал" width="370" />
+                <img
+                  class="pro-img"
+                  alt="Журнал"
+                  srcset="./images/pro7_450.jpg, ./images/pro7_450@2x.jpg 2x"
+                  src="./images/pro7_450.jpg"
+                />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -192,7 +223,12 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro8_450.jpg" alt="Бирка" width="370" />
+                <img
+                  class="pro-img"
+                  alt="Бирка"
+                  srcset="./images/pro8_450.jpg, ./images/pro8_450@2x.jpg 2x"
+                  src="./images/pro8_450.jpg"
+                />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -207,7 +243,12 @@
           <li class="item">
             <a class="link" href="">
               <div class="overflow-img">
-                <img src="./images/pro9_450.jpg" alt="Ноутбук" width="370" />
+                <img
+                  class="pro-img"
+                  alt="Ноутбук"
+                  srcset="./images/pro9_450.jpg, ./images/pro9_450@2x.jpg 2x"
+                  src="./images/pro9_450.jpg"
+                />
                 <p class="pro on-dark">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
